force-app/objects/SFDC_Survey_Question_Response__c/SFDC_Survey_Question_Response__c.object-meta.xml
<CustomObject>
    <description>shadow object for Salesforce Survey Response</description>
    <label>SFDC Survey Question Response</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>SFDC Survey Question Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDC Survey Question Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>