force-app/objects/SFDC_Survey_Question_Response__c/fields/Number_Response__c.field-meta.xml
<CustomField>
    <fullName>Number_Response__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>