force-app/objects/SFDC_Survey_Question_Response__c/fields/Survey_Invitation__c.field-meta.xml
<CustomField>
    <fullName>Survey_Invitation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Invitation</label>
    <referenceTo>SurveyInvitation</referenceTo>
    <relationshipLabel>SFDC Survey Question Responses</relationshipLabel>
    <relationshipName>SFDC_Survey_Question_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>