force-app/objects/SFDC_Survey_Question_Response__c/fields/Survey_Invitation_Name__c.field-meta.xml
<CustomField>
    <fullName>Survey_Invitation_Name__c</fullName>
    <formula>Survey_Invitation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Invitation Name</label>
    <type>Text</type>
</CustomField>