force-app/objects/SFDC_Survey_Question_Response__c/fields/Survey_Question__c.field-meta.xml
<CustomField>
    <fullName>Survey_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Question</label>
    <referenceTo>SurveyQuestion</referenceTo>
    <relationshipLabel>SFDC Survey Question Responses</relationshipLabel>
    <relationshipName>SFDC_Survey_Question_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>