force-app/objects/SFDC_Survey_Question_Response__c/fields/Text_Response__c.field-meta.xml
<CustomField>
    <fullName>Text_Response__c</fullName>
    <label>Value</label>
    <type>TextArea</type>
</CustomField>