force-app/objects/SFDC_Survey_Question_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Question__c</columns>
    <columns>Number_Response__c</columns>
    <columns>Text_Response__c</columns>
    <columns>Survey_Invitation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>